# godot_parser

./: .gitignore  LICENSE  README.md  requirements.txt  requirements_dev.txt  setup.cfg  test_parse_files.py
godot_parser/: __init__.py  __main__.py  files.py  id_generator.py  objects.py  output.py  sections.py  structure.py  tree.py  util.py  values.py
tests/: test_gdfile.py  test_objects.py  test_output.py  test_parser.py  test_sections.py  test_tree.py  test_versions.py
tests/projects/3.3/: custom_resource.gd  resource.tres  scene.tscn
tests/projects/3.4/: scene.tscn
tests/projects/3.5/: custom_node.gd  scene.tscn
tests/projects/3.6/: fresh_resource.tres  project.godot  scene.tscn
tests/projects/4.0/: fresh_resource.tres  project.godot  scene.tscn
tests/projects/4.1/: custom_resource.gd  fresh_resource.tres  project.godot  scene.tscn
tests/projects/4.2/: fresh_resource.tres  project.godot  resource.tres  scene.tscn
tests/projects/4.3/: custom_resource.gd  fresh_resource.tres  project.godot  resource.tres  scene.tscn
tests/projects/4.4/: custom_node.gd.uid  custom_resource.gd  custom_resource.gd.uid  fresh_resource.tres  project.godot  resource.tres  scene.tscn
tests/projects/4.5/: custom_node.gd  fresh_resource.tres  project.godot  resource.tres  scene.tscn
tests/projects/4.6/: fresh_resource.tres  project.godot  resource.tres  scene.tscn
